USERPROFILE feature > refactoring with thunk (adding necessary userId to request)
